--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "declaration": true,
+    "strict": true,
     "outDir": "./dist"
   },
   "include": ["src/**/*"],
